--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
   <title>Lesson 6</title>
 </head>
 <header>
@@ -13,27 +16,29 @@
   <body>
     <div class="fixed-header">
       <nav id="main-nav">
-        <a href="#about-us">About Us</a>
-        <a href="#html-basics">HTML Basics</a>
-        <a href="#css-basics">CSS Basics</a>
+        <a href="#about-us-section">Home</a>
+        <a href="#html-basics-section">HTML Basics</a>
+        <a href="#signup-form-section">Sign Up</a>
         <a href="#javascript-basics">Javacript Basics</a>
         <a href="#react-basics">React Basics</a>
       </nav>
     </div>
-    </div>
 
 
 </header>
-<!-- This section will be an intro to the website -->
-<section id="about-us" class="container">
+<!-- Landing Page/Homepage Section -->
+<section id="about-us-section">
   <div id="learnCodeWrapper">
-    <h1>
+    <h1 onmouseover="learnCode()" onmouseout="learnCodeMouseOut()" ;>
       <span class="learnCode">
         Learn code
       </span>
     </h1>
     <h1 id="inYourSpareTime">
-      in your spare time!
+      <span id="lineBreak1">
+        in your
+      </span>
+      spare time!
     </h1>
   </div>
 </section>
@@ -41,38 +46,37 @@
 
 <!-- This section will be HTML basics -->
 <section id="html-basics-section">
-  <h2><span class="headingStyle">HTML Basics</span></h2>
-  <div id="html-basics" class="container">
-    <div class="article-excerpts">
-      <article id="html-article">
-        <h3> What is HTML?</h3>
-      </article>
-      <article id="links-article">
-        <h3>Links</h3>
-      </article>
-      <article id="lists-article">
-        <h3>Lists, Tables and Images</h3>
-      </article>
-      <article id="divs-article">
-        <h3>Divs and Spans</h3>
-      </article>
-      <article id="modern-html-article">
-        <h3>Modern HTML</h3>
-      </article>
+  <h2 class="headingStyle">HTML Basics</h2>
+  <div class="article-excerpts">
+    <article id="html-article">
+      <h3> What is HTML?</h3>
+    </article>
+    <article id="links-article">
+      <h3>Links</h3>
+    </article>
+    <article id="lists-article">
+      <h3>Lists, Tables and Images</h3>
+    </article>
+    <article id="divs-article">
+      <h3>Divs and Spans</h3>
+    </article>
+    <article id="modern-html-article">
+      <h3>Modern HTML</h3>
+    </article>
 
-    </div>
+  </div>
 
 </section>
 
 <!-- Contact Us Form Section -->
-<section id="signup-form">
-  <h2><span class="headingStyle">Sign Up</span></h2>
+<section id="signup-form-section">
+  <h2 class="headingStyle">Sign Up</h2>
   <div class="field">
     <form class="form" accept-charset="UTF-8" action="https://www.formbackend.com/f/4f51ba137fd333c6" method="POST">
-      <h2>Your Deets</h2>
+      <h2 class="form-H2">Your Deets</h2>
       <input type="text" name="name" placeholder="Full Name" required>
       <input type="email" name="email" placeholder="Email" required>
-      <select id="Course-Type">
+      <select id="course-type" onchange="bgColorChange()" ;>
         <option value="">Select Course</option>
         <option value="HTML">HTML Basics</option>
         <option value="CSS">CSS Crash</option>
@@ -80,8 +84,13 @@
         <option value="React">React Realness</option>
         <option value="Node">Ode to Node</option>
       </select>
+
       <div class="field">
-        <h2>Experience Level</h2>
+        <label for="start" class="form-H2">Start date</label>
+      </div>
+      <input type="date" id="start" name="start-date" value="2018-07-22" min="2022-10-01" max="2022-12-29">
+      <div class="field">
+        <h2 class="form-H2">Experience Level</h2>
         <input type="radio" name="experience" id="beginner" value="Beginner">
         <label for="beginner">Complete N00b</label>
       </div>
@@ -103,18 +112,57 @@
       <label for="excited">Yep, I'm excited!</label>
       <div class="field">
         </divclass>
-        <input type="submit" value="Sign Up">
-      </div>
-
+        <input type="submit" id="signed-up" value="Sign Up" onclick="alert('Thanks for signing up!');">
+    </form>
   </div>
-
-
-  </form>
-
-
-  </div>
-
 </section>
+<div class="footer">
+  Copyright &copy 2022
+  </nav>
+</div>
+
+
+
+<!-- JAVASCRIPT -->
+<script>
+
+  console.log('Hello Console!')
+  console.log('bgColorChange function is changing form sign up section background when any field is changed in the sign up form. It should only change if the select drop down is changed.')
+  console.log('bgColorChange function fixed.')
+
+
+
+  // Learn Code Mouse In and Out Javascript
+  function learnCode() {
+
+    let rotate = document.querySelector('.learnCode')
+
+    rotate.style.transform = "rotate(6deg)";
+
+  }
+
+  function learnCodeMouseOut() {
+
+    let rotateBack = document.querySelector('.learnCode')
+
+    rotateBack.style.transform = "rotate(-6deg)"
+
+  }
+
+  // Sign Up Form Background Colour change on select
+
+  function bgColorChange() {
+    let formSelect = document.querySelector('#signup-form-section')
+    formSelect.style.backgroundColor = "#ffb4a2";
+  }
+
+
+</script>
+
+
+
+
+
 
 
 </body>
