--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,6 +44,29 @@
   </div>
 </section>
 
+<!-- To Do List Section -->
+<section id="todolist-section">
+  <h2>To Do List</h2>
+<form>
+<input type="text" class="todo-input">
+<button class="todo-button" type="submit">
+<i class="fas fa-plus-square"></i>
+</button>
+<div class="select">
+<select name="todos" class="filter-todo">
+<option value="all">All</option>
+<option value="completed">Completed</option>
+<option value="uncompleted">Uncompleted</option>
+</select>
+</div>
+</form>
+<div class="todo-container">
+<ul class="todo-list"></ul>
+</div>
+</section>
+
+
+<!-- END To Do List Section -->
 
 <!-- This section will be HTML basics -->
 <section id="html-basics-section">
@@ -123,47 +147,7 @@
 
 
 
-<!-- JAVASCRIPT -->
-<script>
-
-  console.log('Hello Console!')
-  console.log('bgColorChange function is changing form sign up section background when any field is changed in the sign up form. It should only change if the select drop down is changed.')
-  console.log('bgColorChange function fixed.')
-
-
-
-  // Learn Code Mouse In and Out Javascript
-  function learnCode() {
-
-    let rotate = document.querySelector('.learnCode')
-
-    rotate.style.transform = "rotate(6deg)";
-
-  }
-
-  function learnCodeMouseOut() {
-
-    let rotateBack = document.querySelector('.learnCode')
-
-    rotateBack.style.transform = "rotate(-6deg)"
-
-  }
-
-  // Sign Up Form Background Colour change on select
-
-  function bgColorChange() {
-    let formSelect = document.querySelector('#signup-form-section')
-    formSelect.style.backgroundColor = "#ffb4a2";
-  }
-
-
-</script>
-
-
-
-
-
-
+<script src="main.js"></script>
 
 </body>
 
